Seo optimised and updates added with bug fix

--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aman Kumar | Front-End Web Developer Portfolio</title>
-    <meta name="title" content="Aman Kumar | Front-End Web Developer Portfolio" />
-    <meta name="description" content="Aman Kumar is a passionate front-end developer specializing in JavaScript, React.js, and modern web technologies. Explore his projects, skills, and get in touch!" />
-    <meta name="keywords" content="Aman Kumar, Front-End Developer, Web Developer, React.js Developer, JavaScript Developer, Portfolio, HTML, CSS, Tailwind, Framer Motion, GSAP, India Developer" />
+    <meta
+      name="title"
+      content="Aman Kumar | Front-End Web Developer Portfolio"
+    />
+    <meta
+      name="description"
+      content="Aman Kumar is a passionate front-end developer specializing in JavaScript, React.js, and modern web technologies. Explore his projects, skills, and get in touch!"
+    />
+    <meta
+      name="keywords"
+      content="Aman Kumar, Front-End Developer, Web Developer, React.js Developer, JavaScript Developer, Portfolio, HTML, CSS, Tailwind, Framer Motion, GSAP, India Developer"
+    />
     <meta name="author" content="Aman Kumar" />
     <meta name="robots" content="index, follow" />
     <link rel="icon" type="image/png" href="./src/assets/aman-favicon.ico" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Aman Kumar | Front-End Web Developer Portfolio" />
-    <meta property="og:description" content="Explore Aman Kumar's portfolio featuring web development projects built with React.js, Tailwind, GSAP, and more." />
-    <meta property="og:image" content="./src/assets/profilePic.jpg" />
+    <meta
+      property="og:title"
+      content="Aman Kumar | Front-End Web Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Explore Aman Kumar's portfolio featuring web development projects built with React.js, Tailwind, GSAP, and more."
+    />
+    <meta
+      property="og:image"
+      content="https://www.amankr.co.in/assets/AmanAbout-Y75WnXZN.jpg"
+    />
+    <meta
+      name="google-site-verification"
+      content="N_OEpQ7UfXS3Pp0eFGa_6H3kEwfDIrzxD0_nrZc6JEA"
+    />
   </head>
   <body>
     <div id="root"></div>
