Blogs section added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     />
     <meta name="author" content="Aman Kumar" />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" type="image/png" href="./src/assets/aman-favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/aman-favicon.ico" />
+    <link rel="shortcut icon" href="./aman-favicon.ico" type="image/x-icon" />
+
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
