meta data updated

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Aman Kumar | Front-End Web Developer Portfolio</title>
     <meta
       name="title"
-      content="Aman Kumar | Front-End Web Developer Portfolio"
+      content="Aman Kumar | Full-Stack Web Developer Portfolio"
     />
     <meta
       name="description"
-      content="Aman Kumar is a passionate front-end developer specializing in JavaScript, React.js, and modern web technologies. Explore his projects, skills, and get in touch!"
+      content="Aman Kumar is a passionate Web developer specializing in JavaScript, React.js, and modern web technologies. Explore his projects, skills, and get in touch!"
     />
     <meta
       name="keywords"
-      content="Aman Kumar, Front-End Developer, Web Developer, React.js Developer, JavaScript Developer, Portfolio, HTML, CSS, Tailwind, Framer Motion, GSAP, India Developer"
+      content="Aman Kumar, Front-End Developer, Web Developer, React.js Developer, JavaScript Developer, Portfolio, HTML, CSS, Tailwind, Framer Motion, GSAP, India Developer, Full-Stack Developer"
     />
     <meta name="author" content="Aman Kumar" />
     <meta name="robots" content="index, follow" />
@@ -24,11 +24,11 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Aman Kumar | Front-End Web Developer Portfolio"
+      content="Aman Kumar | Full-Stack Web Developer Portfolio"
     />
     <meta
       property="og:description"
-      content="Explore Aman Kumar's portfolio featuring web development projects built with React.js, Tailwind, GSAP, and more."
+      content="Explore Aman Kumar's portfolio featuring full-stack projects built with React.js, Node.js, Express, PostgreSQL, and more."
     />
     <meta
       property="og:image"
